fixed bgColor in small screens overflowing

--- a/src/index.css
+++ b/src/index.css
@@ -19,12 +19,12 @@ input[type=number] {-moz-appearance: textfield;} /* Firefox */
   font-family: "Work Sans", system-ui, Avenir, Helvetica, Arial, sans-serif;
   font-weight: 400;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+  @apply bg-neutral-950
  
 }
 
